@@ -1,3 +1,7 @@
+2009-02-06  tama  <repeatedly@gmail.com>
+
+	* Fix logger config for Ramaze-2009.01.
+
 2008-10-01  tama  <repeatedly@gmail.com>
 
 	* Complete localize view template.
